# sodeda-era5

./: .env.example  .gitignore  README.md  descriptor1.jsonl  deskriptors.jsonl  pyproject.toml  setup.py
docker/: Dockerfile  build.sh  requirements.txt  run-gradio.sh  run-gradio.template  run-pipeline.sh  run.sh
docker/scripts/: setup.sh
src/sodeda_era5/: __init__.py  __main__.py  dashboard.py  dataset.py  flow.py  loader.py
